--- a/library.properties
+++ b/library.properties
@@ -3,4 +3,5 @@ version=1.0.0
 license=LGPLv3
 author=BPS
 sentence=A 5x5x5 Led cube library
-repositoryhttps://github.com/bryanschremp/5x5Cube
+url=https://github.com/bryanschremp/5x5Cube
+repository=yhttps://github.com/bryanschremp/5x5Cube.git
