--- a/library.properties
+++ b/library.properties
@@ -4,4 +4,4 @@ license=LGPLv3
 author=BPS
 sentence=A 5x5x5 Led cube library
 url=https://github.com/bryanschremp/5x5Cube
-repository=yhttps://github.com/bryanschremp/5x5Cube.git
+repository=https://github.com/bryanschremp/5x5Cube.git
